--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a href="about.html">About</a>
       <a href="galery.html">Galery</a>
       <a href="dashboard.html">Dashboard</a>
+      <a href="iframe.html">Iframe</a>
     </nav>
   </header>
   <main>
